# maggie

./: .gitignore  _post_install_setup.py  command-reference.md  config-yaml-example.txt  config.yaml  config.yaml.example  configuration_manager.py  hardware_detector.py  hardware_info.json.tmp  hardware_manager.py  hardware_optimization.py  install.py  install_dev.py  installation-guide.md  installation.md  maggie.py  main.py  project-readme.md  pyproject.toml  readme.md  requirements.txt  resource_config.json  setup-bash.sh  setup-check.py  setup-script.txt  setup.py  setup_instructions.txt  setup_linux.sh  setup_windows.bat  test.py  test_maggie.py  test_tts_tps.py  transcription_client.py  transcription_server.py  troubleshooting.md  user-tutorial.md
_dependencies/: readme.txt
_dependencies/windows/: .gitignore
_dependencies/windows/pvporcupine/: Hey-Maggie_en_windows_v3_0_0.ppn
_dependencies/windows/whisper_streaming/: __init__.py
_docstrings/: .gitignore
_downloads/: .gitignore
assets/: .gitignore  readme.txt
assets/windows/: .gitignore
assets/windows/pvporcupine/: access_key.txt  pvporcupine-2.2.1-py3-none-any.whl
docs/: documentation_(extended).html
docs/merged/: .gitignore  install-doc.pyi  main-doc.py  setup-doc.py
docs/merged/maggie/core/: app-doc.py  event-doc.py  initialization-doc.py  state-doc.py
docs/merged/maggie/service/: locator-doc.py
docs/merged/maggie/utils/: abstractions-doc.py  adapters-doc.py  error_handling-doc.py  gui-doc.py  logging-doc.py
docs/merged/maggie/utils/config/: manager-doc.py
docs/minified/: install.py
docs/minified/core/: app.py  event.py  state.py
docs/minified/extensions/: base.py  manager.py  registry.py
docs/minified/extensions/recipe_creator/: recipe_creator.py
docs/minified/service/: locator.py
docs/minified/service/tts/: processor.py
docs/minified/utils/: adapters.py  error_handling.py  logging.py
docs/minified/utils/resource/: monitor.py
docs/source/: Documentation.html  Documentation.md  README.MD  application-logic-flow.md  install.pyi  main.pyi  setup.pyi
docs/source/maggie/core/: State and Event Bus Systems.md  event.pyi  state.pyi
docs/source/maggie/service/: Service Locator Technical Manual.md  locator.pyi
docs/source/maggie/utils/: Abstractions and Adapters.md  adapters.pyi  gui.pyi  logging.pyi  logging_and_error_handling.md
docs/source/maggie/utils/config/: manager.pyi
docs/source/maggie/utils/resource/: Resource Management Package.md  optimizer.pyi
downloads/: .gitignore
extensions/: __init__.template
maggie/: __init__.py  _maggie.py  core.py  maggie.py
maggie/core/: __init__.py  app.py  event.py  event.pyi  initialization.py  state.py
maggie/docs/: documentation_extended.html
maggie/extensions/: __init__.py  base.py  manager.py  registry.py
maggie/extensions/recipe_creator/: __init__.py  config.py  recipe_creator.py
maggie/models/llm/: .gitignore
maggie/models/stt/whisper-base.en/: README.md
maggie/service/: __init__.py  locator.py  service_locator.py
maggie/service/llm/: __init__.py  processor.py
maggie/service/stt/: __init__.py  processor.py  wake_word.py
maggie/service/stt/whisper_streaming/: __init__.py  silero_vad_iterator.py  whisper_online.py
maggie/service/tts/: __init__.py  processor.py
maggie/templates/: recipe_template.docx
maggie/templates/extension/: extension.py.template
maggie/utils/: __init__.py  abstractions.py  adapters.py  error_handler_impl.py  error_handling.py  error_handling.pyi  gui.py  gui.pyi  logging.py  logging.pyi  resource_management.py  service_locator.py
maggie/utils/attention/: __init__.py  wake_word.py
maggie/utils/config/: __init__.py  manager.py  validator.py
maggie/utils/hardware/: __init__.py  gpu_utils.py  manager.py
maggie/utils/llm/: __init__.py  llm_processor.py  processor.py
maggie/utils/resource/: __init__.py  detector.py  manager.py  monitor.py  optimizer.py
maggie/utils/speech/: __init__.py  speech_processor.py  tts.py
maggie/utils/stt/: __init__.py  processor.py  wake_word.py
maggie/utils/stt/whisper_streaming/: line_packet.py  silero_vad_iterator.py  whisper_online.py  whisper_online_server.py
maggie/utils/tts/: __init__.py  processor.py
models/: .gitignore
scripts/: extension_manager.py  install.py
templates/: recipe_template.docx
templates/extension/: extension.py.template
testing/: loging_and_error_decorators.py  sim_input_OOP.py  sim_input_functional.py  test.py  test_for_llm.py  test_for_tts.py  test_huggingface.py  tts_stream_test.py
utils/: config.py  config_validator.py  configuration_manager.py  gui.py  kokoro_tts.py  logging.py  recipe_creator.py  tts.py  utility_base.py
