# pyproject.toml (Configured for Poetry)

[tool.poetry]
name = "maggie"
version = "0.1.0"
description = "Maggie AI Assistant - Finite State Machine AI Assistant with modular utilities"
authors = ["Anthony Formosa <emailformosa@gmail.com>"] # Use the author info from original file
license = "MIT"
readme = "README.md"
packages = [{include = "maggie"}] # Assumes your main package code is in a 'maggie' directory

# Specify Python 3.10 compatibility
# ~3.10 means >=3.10.0, <3.11
# Alternatively, use ">=3.10,<3.11"
dependencies = { python = "~3.10" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

homepage = "https://github.com/formosa/maggie" # Add project URLs if available
repository = "https://github.com/formosa/maggie"
documentation = "https://github.com/formosa/maggie" # Example URL
keywords = ["ai", "assistant", "llm", "tts", "stt"]

# --- PyTorch Source Definition for CUDA 11.8 ---
[[tool.poetry.source]]
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit" # Ensure this source is used for specified packages


[tool.poetry.dependencies]
# --- Pinned Dependencies (Using specific source) ---
torch = {version = "2.1.2", source = "pytorch_cu118"}
torchvision = {version = "0.16.2", source = "pytorch_cu118"}
torchaudio = {version = "0.16.2", source = "pytorch_cu118"}

# --- Core Dependencies (Let Poetry Resolve) ---
# Using caret (^) allows compatible updates within the major version
# Using asterisk (*) allows any version (use with caution)
PyYAML = "^6.0"
loguru = "^0.7"
numpy = "*" # Let torch/others constrain this
tqdm = "^4.66"
requests = "^2.31"
psutil = "^5.9"

# --- STT Dependencies ---
pvporcupine = "^3.0" # Version from original requirements
SpeechRecognition = "^3.10"
PyAudio = "*" # May require system libraries (portaudio) and build tools
# Note: faster-whisper 0.9.0 had tokenizer<0.15 conflict.
# Using >=0.10.0 should resolve this, let Poetry pick latest compatible.
faster-whisper = ">=0.10.0"
sounddevice = "^0.4.6" # Version from original requirements

# --- TTS Dependencies ---
# Install kokoro directly from GitHub (main branch)
kokoro = {git = "https://github.com/hexgrad/kokoro.git"}
# kokoro-onnx had conflicts, let Poetry try to resolve or omit if causing issues
kokoro-onnx = "*" # Or specify a known compatible version like "^0.4.7" if conflicts persist
huggingface-hub = ">=0.15.1" # Version from original requirements comment
soundfile = ">=0.12.1"
librosa = ">=0.10.0"
phonemizer = ">=3.2.1"

# --- LLM Dependencies ---
transformers = "^4.38" # Based on original requirements
optimum = "^1.17"
accelerate = "^0.27"
safetensors = ">=0.4.0"
sentencepiece = ">=0.1.99"
protobuf = "*" # Usually a dependency of others
ninja = ">=1.11.1" # Often needed for building extensions

# --- UI and Document Processing ---
PySide6 = "^6.5" # Based on original requirements
python-docx = ">=0.8.11"
transitions = "^0.9.0"
mammoth = "^1.7.0"

# --- Optional GPU Dependencies (defined in extras) ---
# Mark as optional here if they are *only* needed for the 'gpu' extra
onnxruntime-gpu = { version = "*", optional = true } # Let poetry resolve, check kokoro-onnx compatibility
auto-gptq = { version = "^0.7.1", optional = true } # Based on original requirements


# --- Define Optional Dependency Groups ---
[tool.poetry.extras]
# Dependencies needed only for GPU acceleration
gpu = ["onnxruntime-gpu", "auto-gptq"]


# --- Development Dependencies (Optional) ---
[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
isort = ">=5.0.0"
flake8 = ">=6.0.0"
pipdeptree = "*" # Useful for debugging dependencies


# --- Build System Definition (Required for Poetry) ---
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# --- Tool Configurations (Optional, e.g., for linters/formatters) ---
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv"] # Add .venv
