# pyproject.toml (Configured for Poetry)

[tool.poetry]
name = "maggie"
version = "0.1.0"
description = "Maggie AI Assistant - Finite State Machine AI Assistant with modular utilities"
authors = ["Anthony Formosa <emailformosa@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "maggie"}]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
homepage = "https://github.com/formosa/maggie"
repository = "https://github.com/formosa/maggie"
documentation = "https://github.com/formosa/maggie"
keywords = ["ai", "assistant", "llm", "tts", "stt"]

# --- PyTorch Source Definition for CUDA 11.8 ---
[[tool.poetry.source]]
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


# --- Main Dependencies Section ---
[tool.poetry.dependencies]
python = "~3.10"

# --- Pinned Dependencies (Using specific source) ---
torch = {version = "2.1.2", source = "pytorch_cu118"}
torchvision = {version = "0.16.2", source = "pytorch_cu118"}
torchaudio = {version = "2.1.2", source = "pytorch_cu118"}

# --- Core Dependencies (Let Poetry Resolve) ---
PyYAML = "^6.0"
loguru = "^0.7"
numpy = "*"
tqdm = "^4.66"
requests = "^2.31"
psutil = "^5.9" # Already included, used for hardware detection
WMI = { version = "*", markers = "sys_platform == 'win32'" } # Added: For Windows hardware detection

# --- STT Dependencies ---
pvporcupine = "^3.0"
SpeechRecognition = "^3.10"
PyAudio = "*" # May require system libraries (portaudio) and build tools
faster-whisper = ">=0.10.0"
sounddevice = "^0.4.6"

# --- TTS Dependencies ---
kokoro = {git = "https://github.com/hexgrad/kokoro.git"}
kokoro-onnx = "*"
huggingface-hub = ">=0.15.1"
soundfile = ">=0.12.1"
librosa = ">=0.10.0"
phonemizer = ">=3.2.1"

# --- LLM Dependencies ---
transformers = "^4.38"
optimum = "^1.17"
accelerate = "^0.27"
safetensors = ">=0.4.0"
sentencepiece = ">=0.1.99"
protobuf = "*"
ninja = ">=1.11.1"

# --- UI and Document Processing ---
PySide6 = "^6.5"
python-docx = ">=0.8.11"
transitions = "^0.9.0"
mammoth = "^1.7.0"

# --- Optional GPU Dependencies (defined in extras) ---
onnxruntime-gpu = { version = "*", optional = true }
auto-gptq = { version = "^0.7.1", optional = true }


# --- Define Optional Dependency Groups ---
[tool.poetry.extras]
gpu = ["onnxruntime-gpu", "auto-gptq"]


# --- Development Dependencies (Optional) ---
[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
isort = ">=5.0.0"
flake8 = ">=6.0.0"
pipdeptree = "*"


# --- Build System Definition (Required for Poetry) ---
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# --- Tool Configurations (Optional) ---
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
